@@ -115,3 +115,7 @@ export(measure.dynamics.idage)
 
 export(graph.isoclass, graph.isomorphic, graph.motifs,
        graph.motifs.est, graph.isocreate)
+
+# operators
+
+export(graph.union, "%u%")
