@@ -9,6 +9,42 @@ AC_SUBST(HAVE_FMEMOPEN)
 AC_CHECK_FUNCS(open_memstream, [HAVE_OPEN_MEMSTREAM=1], [HAVE_OPEN_MEMSTREAM=0])
 AC_SUBST(HAVE_OPEN_MEMSTREAM)
 
+graphml_support=yes
+AC_ARG_ENABLE(graphml,
+              AC_HELP_STRING([--disable-graphml], [Disable support for GraphML format]),
+              [graphml_support=$enableval], [graphml_support=yes])
+
+HAVE_LIBXML=0
+if test $graphml_support = yes; then
+  AC_PATH_PROG([XML2CONFIG], [xml2-config], [none])
+  if test "$XML2CONFIG" = "none"; then
+    graphml_support=no
+  else
+    XML2_LIBS=`$XML2CONFIG --libs`
+    XML2_CFLAGS=`$XML2CONFIG --cflags`
+    AC_CHECK_LIB([xml2], [xmlSAXUserParseFile], [
+      OLDCFLAGS=${CFLAGS}
+      OLDCPPFLAGS=${CPPFLAGS}
+      CFLAGS=${XML2_CFLAGS}
+      CPPFLAGS=${XML2_CFLAGS}
+      AC_CHECK_HEADER([libxml/parser.h], [
+        HAVE_LIBXML=1
+	AC_DEFINE([HAVE_LIBXML], [1], [Define to 1 if you have the libxml2 libraries installed])
+        CFLAGS="${OLDCFLAGS} ${XML2_CFLAGS}"
+	CPPFLAGS="${OLDCFLAGS} ${XML2_CFLAGS}"
+	AC_SUBST(XML2_LIBS)
+	AC_SUBST(XML2_CFLAGS)
+      ], [
+        graphml_support=no
+        CFLAGS=${OLDCFLAGS}
+	CPPFLAGS=${OLDCPPFLAGS}
+      ])
+    ], [
+      graphml_support=no
+    ])
+  fi
+fi
+
 AC_CONFIG_FILES([src/config.h R/config.R])
 
 AC_OUTPUT
